Cambio de branch

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-        <p>Lorem ipsum, dddolor sit amet consectetur adipisicing elit. Porro obcaecati libero perferendis, rem minus quis! Dicta commodi nihil cupiditate excepturi!</p>
+        <p>Lorem ipsdaum, dddolor sit amet consectetur adipisicing elit. Porro obcaecati libero perferendis, rem minus quis! Dicta commodi nihil cupiditate excepturi!</p>
     </footer>
     
     
