Ventana de comienzo de partida parametrizada

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
                 <button class="botonJugar">Volver a Jugar</button>
             </div>
         </div>
+        <div class="panelEmergente" id="ventanaEmpezar">
+            <div class="ventana">
+                <h2>Opciones de Juego</h2>
+                <p>Dime cuantas vidas quieres</p>
+                <input type="number" name="" id="inputVidas"><br>
+                <p>Dime cuantas parejas quieres</p>
+                <input type="number" name="" id="inputCartas"><br>
+                <p>Dime cuanto tiempo de partida quieres</p>
+                <input type="number" name="" id="inputTiempo"><br>
+                <button class="" id="botonEmpezar">Jugar</button>
+            </div>
+        </div>
         <div id="tiempo"></div>
         <div class="contenedor-vidas" id="contenedorVidas"></div>
         <div class="contenedor-cartas" id="contenedorCartas"></div>
