Limitacion de valores de pantalla de empezar partida

--- a/index.html
+++ b/index.html
@@ -44,12 +44,19 @@
             <div class="ventana">
                 <h2>Opciones de Juego</h2>
                 <p>Dime cuantas vidas quieres</p>
+                <p class="alerta" id="alertaVidas"> </p>
                 <input type="number" name="" id="inputVidas"><br>
+
                 <p>Dime cuantas parejas quieres</p>
+                <p class="alerta" id="alertaCartas"> </p>
                 <input type="number" name="" id="inputCartas"><br>
+                
                 <p>Dime cuanto tiempo de partida quieres</p>
+                <p class="alerta" id="alertaTiempo"> </p>
                 <input type="number" name="" id="inputTiempo"><br>
+
                 <button class="" id="botonEmpezar">Jugar</button>
+                <button class="" id="botonEmpezarPredefinida">Partida Predefinida</button>
             </div>
         </div>
         <div id="tiempo"></div>
