ajustes de marcador, aciertos, puntuacion, cartas descubiertas, ajuste de fondo

--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
     
     <nav>
         <ul>
-            <li><a href="#">Juego Parejas</a></li>
-            <li><a href="#">Reiniciar</a></li>
-            <li><a href="#">Opciones</a></li>
-            <li><a href="#">Otra cosa</a></li>
+            <li>
+                <p>TIEMPO</p>
+                <P id="tiempo" class="score">00:00</P>
+            </li>
+            <li> 
+                <p>PUNTUACION</p>
+                <P id="puntuacion" class="score">10000</P>
+            </li>
+            <li> 
+                <p>DESCUBIERTAS</p>
+                <P id="descubiertas" class="score">10000</P>
+            </li>
+            <li> 
+                <p>ACIERTOS</p>
+                <P id="aciertos" class="score">10000</P>
+            </li>
+            <li> <button> Reiniciar </button></li>
+            <li> <button> Modo claro/oscuro </button></li>
         </ul>
     </nav>
 
@@ -60,7 +74,6 @@
                 <button class="" id="botonEmpezarPredefinida">Partida Predefinida</button>
             </div>
         </div>
-        <div id="tiempo"></div>
         <div class="contenedor-vidas" id="contenedorVidas"></div>
         <div class="contenedor-cartas" id="contenedorCartas"></div>
     </main>
