Actualizacion de puntuacion

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <ul>
             <li>
                 <p>TIEMPO</p>
-                <P id="tiempo" class="score">00:00</P>
+                <P id="tiempo" class="score"></P>
             </li>
             <li> 
                 <p>PUNTUACION</p>
-                <P id="puntuacion" class="score">10000</P>
+                <P id="puntuacion" class="score"></P>
             </li>
             <li> 
                 <p>DESCUBIERTAS</p>
-                <P id="descubiertas" class="score">10000</P>
+                <P id="descubiertas" class="score"></P>
             </li>
             <li> 
                 <p>ACIERTOS</p>
-                <P id="aciertos" class="score">10000</P>
+                <P id="aciertos" class="score"></P>
             </li>
             <li> <button> Reiniciar </button></li>
             <li> <button> Modo claro/oscuro </button></li>
