funcionalidad de boton de reinicio, y boton de tema oscuro/claro

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <p>ACIERTOS</p>
                 <P id="aciertos" class="score"></P>
             </li>
-            <li> <button> Reiniciar </button></li>
-            <li> <button> Modo claro/oscuro </button></li>
+            <li> <button id="botonReinicio"> Reiniciar </button></li>
+            <li> <button id="botonTema"> Modo claro/oscuro </button></li>
         </ul>
     </nav>
 
