--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesGame.css">
     <script src="script.js" defer></script>
+    <script src="scriptTemas.js" defer></script>
 </head>
 <body>
     
@@ -40,17 +41,23 @@
     <main>
         <div class="panelEmergente" id="ventanaGanar">
             <div class="ventana">
-                <h2>Has ganao</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur numquam culpa dolorum non reprehenderit nobis fugit sunt quia animi, totam nulla consequuntur minus dolorem quae et itaque ad, cum obcaecati.</p>
-                <p>patata</p>
+                <h2>Has Ganado!</h2>
+                <h3>Tiempo</h3>
+                <p class="scoreTiempoFinal">10%</p>
+                <h3>Aciertos</h3>
+                <p class="scoreAciertosFinal">10%</p>
+                <h3>Puntuación</h3>
+                <p class="scorePuntuacionFinal">1034</p>
                 <button class="botonJugar">Volver a Jugar</button>
             </div>
         </div>
         <div class="panelEmergente" id="ventanaPerder">
             <div class="ventana">
-                <h2>Has Perdio</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur numquam culpa dolorum non reprehenderit nobis fugit sunt quia animi, totam nulla consequuntur minus dolorem quae et itaque ad, cum obcaecati.</p>
-                <p>patata</p>
+                <h2>Has Perdido!</h2>
+                <h3>Aciertos</h3>
+                <p class="scoreAciertosFinal">10%</p>
+                <h3>Puntuación</h3>
+                <p class="scorePuntuacionFinal">1034</p>
                 <button class="botonJugar">Volver a Jugar</button>
             </div>
         </div>
