Añadida la funcionalidadde nueva pestaña, asi como mantener la puntuacion y  estadíticas relevantes

--- a/derrota.html
+++ b/derrota.html
@@ -40,7 +40,7 @@
 
     <main>
         <div class="ventana final">
-            <h2>HAS GANADO!</h2>
+            <h2>HAS PERDIDO!</h2>
             <h3>Tiempo</h3>
             <p id="panelTiempo">00:00</p>
             <h3>Aciertos</h3>
