Ajuste de pantallas, cambio en opciones de juego, añadido el parametro y la posibilidad de abrir pestaña al finalizar el juego

--- a/victoria.html
+++ b/victoria.html
@@ -19,19 +19,19 @@
         <ul>
             <li>
                 <p>TIEMPO</p>
-                <P id="tiempo" class="score"></P>
+                <P id="tiempo" class="panelTiempo score"></P>
             </li>
             <li> 
                 <p>PUNTUACION</p>
-                <P id="puntuacion" class="score"></P>
+                <P id="puntuacion" class="panelPuntuacion score"></P>
             </li>
             <li> 
                 <p>DESCUBIERTAS</p>
-                <P id="descubiertas" class="score"></P>
+                <P id="descubiertas" class="panelDescubiertas score"></P>
             </li>
             <li> 
                 <p>ACIERTOS</p>
-                <P id="aciertos" class="score"></P>
+                <P id="aciertos" class="panelAciertos score"></P>
             </li>
             <li> <button id="botonReinicio"> Reiniciar </button></li>
             <li> <button id="botonTema"> Modo claro/oscuro </button></li>
@@ -41,12 +41,12 @@
     <main>
         <div class="ventana final">
             <h2>HAS GANADO!</h2>
-            <h3>Tiempo</h3>
-            <p id="panelTiempo">00:00</p>
+            <h3>Tiempo sobrante</h3>
+            <p class="panelTiempo">00:00</p>
             <h3>Aciertos</h3>
-            <p id="panelAciertos">10%</p>
+            <p class="panelAciertos">10%</p>
             <h3>Puntuación Total</h3>
-            <p id="panelPuntuacion">100000</p>
+            <p class="panelPuntuacion">100000</p>
             <button id="botonJugar">Volver a Jugar</button>
         </div>        
     </main>
