--- a/derrota.html
+++ b/derrota.html
@@ -19,19 +19,19 @@
         <ul>
             <li>
                 <p>TIEMPO</p>
-                <P id="tiempo" class="score"></P>
+                <P id="tiempo" class="panelTiempo"></P>
             </li>
             <li> 
                 <p>PUNTUACION</p>
-                <P id="puntuacion" class="score"></P>
+                <P id="puntuacion" class="panelPuntuacion"></P>
             </li>
             <li> 
                 <p>DESCUBIERTAS</p>
-                <P id="descubiertas" class="score"></P>
+                <P id="descubiertas" class="panelDescubiertas"></P>
             </li>
             <li> 
                 <p>ACIERTOS</p>
-                <P id="aciertos" class="score"></P>
+                <P id="aciertos" class="panelAciertos"></P>
             </li>
             <li> <button id="botonReinicio"> Reiniciar </button></li>
             <li> <button id="botonTema"> Modo claro/oscuro </button></li>
@@ -41,7 +41,7 @@
     <main>
         <div class="ventana final">
             <h2>HAS PERDIDO!</h2>
-            <h3>Tiempo</h3>
+            <h3>Tiempo sobrante</h3>
             <p id="panelTiempo">00:00</p>
             <h3>Aciertos</h3>
             <p id="panelAciertos">10%</p>
