--- a/derrota.html
+++ b/derrota.html
@@ -19,19 +19,19 @@
         <ul>
             <li>
                 <p>TIEMPO</p>
-                <P id="tiempo" class="panelTiempo"></P>
+                <P id="tiempo" class="panelTiempo score"></P>
             </li>
             <li> 
                 <p>PUNTUACION</p>
-                <P id="puntuacion" class="panelPuntuacion"></P>
+                <P id="puntuacion" class="panelPuntuacion score"></P>
             </li>
             <li> 
                 <p>DESCUBIERTAS</p>
-                <P id="descubiertas" class="panelDescubiertas"></P>
+                <P id="descubiertas" class="panelDescubiertas score"></P>
             </li>
             <li> 
                 <p>ACIERTOS</p>
-                <P id="aciertos" class="panelAciertos"></P>
+                <P id="aciertos" class="panelAciertos score"></P>
             </li>
             <li> <button id="botonReinicio"> Reiniciar </button></li>
             <li> <button id="botonTema"> Modo claro/oscuro </button></li>
@@ -42,11 +42,11 @@
         <div class="ventana final">
             <h2>HAS PERDIDO!</h2>
             <h3>Tiempo sobrante</h3>
-            <p id="panelTiempo">00:00</p>
+            <p class="panelTiempo">00:00</p>
             <h3>Aciertos</h3>
-            <p id="panelAciertos">10%</p>
+            <p class="panelAciertos">10%</p>
             <h3>Puntuación Total</h3>
-            <p id="panelPuntuacion">100000</p>
+            <p class="panelPuntuacion">100000</p>
             <button id="botonJugar">Volver a Jugar</button>
         </div>        
     </main>
